# mdr-girlanda2025-rtos

./: .clang-format  CMakeLists.txt  Makefile
girlanda/: CMakeLists.txt  algos.h  definitions.h  girlanda.c  girlanda.h  helpers.c  helpers.h  joystick.c  joystick.h
girlanda/algos/: breath.c  danger_noodle.c
lib/Config/: MDR32F9Qx_config.h
src/: delay.c  delay.h  joystick.c  joystick.h  main.c  main.h  usb.c
src/freertos/: FreeRTOSConfig.h
